build_log_3_utf8.txt

> vite_react_shadcn_ts@0.0.0 build
> vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node.exe : node:inter
nal/process/promises:
394
At line:1 char:1
+ & "C:\Program Files
\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : 
NotSpecifi    ed: 
(node:internal    
/process/promises:   
 394:String) [], Re  
  moteException
    + 
FullyQualifiedEr    
rorId : NativeComm   
 andError
 
    triggerUncaughtEx
ception(err, true /* 
fromPromise */);
    ^

[Failed to load 
PostCSS config: 
Failed to load 
PostCSS config 
(searchPath: C:/Users
/EUPH-DG-PC/Immapass)
: [Error] Loading 
PostCSS Plugin 
failed: Cannot find 
module 'C:\Users\EUPH
-DG-PC\Immapass\node_
modules\postcss\lib\p
ostcss.js'

(@C:\Users\EUPH-DG-PC
\Immapass\postcss.con
fig.js)
Error: Loading 
PostCSS Plugin 
failed: Cannot find 
module 'C:\Users\EUPH
-DG-PC\Immapass\node_
modules\postcss\lib\p
ostcss.js'

(@C:\Users\EUPH-DG-PC
\Immapass\postcss.con
fig.js)
    at load (file:///
C:/Users/EUPH-DG-PC/I
mmapass/node_modules/
vite/dist/node/chunks
/dep-BK3b2jBa.js:3363
2:11)
    at file:///C:/Use
rs/EUPH-DG-PC/Immapas
s/node_modules/vite/d
ist/node/chunks/dep-B
K3b2jBa.js:33657:16
    at Array.map 
(<anonymous>)
    at plugins (file:
///C:/Users/EUPH-DG-P
C/Immapass/node_modul
es/vite/dist/node/chu
nks/dep-BK3b2jBa.js:3
3656:8)
    at processResult 
(file:///C:/Users/EUP
H-DG-PC/Immapass/node
_modules/vite/dist/no
de/chunks/dep-BK3b2jB
a.js:33726:14)
    at file:///C:/Use
rs/EUPH-DG-PC/Immapas
s/node_modules/vite/d
ist/node/chunks/dep-B
K3b2jBa.js:33856:14]

Node.js v24.11.1
